Both LevenshteinSingleSided and LevenshteinDualSided produce the same, correct, and readable output, seemingly. DualSided averages 433 milliseconds on Monkey -> Business